--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -33,13 +33,17 @@
                                     <div class="d-inline-flex flex-nowrap align-items-center justify-content-center">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" checked value="0">
-                                            <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
+                                            <label class="form-check-label" for="radioDaiHoc">QL Hệ đại học</label>
                                         </div>
                                         <div class="form-check" style="margin-left:15px">
                                             <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1">
                                             <label class="form-check-label" for="radioSauDaiHoc">
-                                                Hệ sau đại học
-                                            </label>
+                                               QL Hệ sau đại học                                            </label>
+                                        </div>
+                                        <div class="form-check" style="margin-left:15px">
+                                            <input class="form-check-input" type="radio" id="radioThiNK" name="radioHeDaoTao" value="2">
+                                            <label class="form-check-label" for="radioThiNK">
+                                              QL Thi năng khiếu                                            </label>
                                         </div>
                                     </div>
                                     <div>
