--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
@@ -17,7 +17,7 @@
     }
 
     .bd-rd {
-      /*  border-radius: 0px !important;*/
+        border-radius: 3px;
     }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
