--- a/Areas/Admin/Views/DotXetTuyens/MasterIndex.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/MasterIndex.cshtml
@@ -51,7 +51,7 @@
                                     <th>
                                         @Html.DisplayNameFor(model => model.Dxt_GhiChu)
                                     </th>
-                                    <th> @Html.ActionLink("Thêm mới", "Create")</th>
+                                    <th> @Html.ActionLink("Thêm mới", "QLDotDuTuyenSDH_Add", "HocVienDangKys")</th>
                                 </tr>
                             </thead>
                             <tbody>
