--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -201,7 +201,7 @@
                                             <td colspan="4">
                                                 <div class="row g-3 align-items-center">
                                                     <div class="col-4">
-                                                        <label for="select_namtn" class="col-form-label">Tên đơn vị:</label>
+                                                        <label class="col-form-label">Tên đơn vị:</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input id="Dkxt_DonViToChuc" type="text" class="form-control" placeholder="Tên đơn vị" value="" />
@@ -214,7 +214,7 @@
                                             <td colspan="4">
                                                 <div class="row g-3 align-items-center">
                                                     <div class="col-4">
-                                                        <label for="select_namtn" class="col-form-label">Kết quả:</label>
+                                                        <label  class="col-form-label">Kết quả:</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input id="Dkxt_KetQuaDatDuoc" type="number" class="form-control" placeholder="Kết quả" value="" />
@@ -227,7 +227,7 @@
                                             <td colspan="4">
                                                 <div class="row g-3 align-items-center">
                                                     <div class="col-4">
-                                                        <label for="select_namtn" class="col-form-label">Thang điểm:</label>
+                                                        <label  class="col-form-label">Thang điểm:</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input id="Dkxt_TongDiem" type="number" class="form-control" placeholder="Thang điểm" value="" disabled />
@@ -240,7 +240,7 @@
                                             <td colspan="4">
                                                 <div class="row g-3 align-items-center">
                                                     <div class="col-4">
-                                                        <label for="Dkxt_NgayDuThi" class="col-form-label">Ngày thi:</label>
+                                                        <label class="col-form-label">Ngày thi:</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input id="datepicker" name="Dkxt_NgayDuThi" type="text" class="form-control" placeholder="Ngày thi" value="" />
@@ -260,8 +260,8 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-xxl-12">
-                                <div class="form-group mb-2">
-                                    <label for="formFileMultiple" class="form-label">Chứng nhận</label>
+                                <div class="form-group mb-2">formFileMultiple
+                                    <label class="form-label">Chứng nhận</label>
                                     <div class="col-md-12">
                                         <input class="form-control" id="files_chungnhan" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                accept="application/pdf,.png, .jpeg, .jpg" />
@@ -293,7 +293,7 @@
                                                 <div class="row mb-3">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Học bạ </label>
+                                                            <label  class="form-label">Học bạ </label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_hocba" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file học bạ"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -308,7 +308,7 @@
                                                     </div>
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Căn cước công dân</label>
+                                                            <label  class="form-label">Căn cước công dân</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_cccd" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file CCCD"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -323,7 +323,7 @@
                                                     </div>
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Bằng Tốt nghiệp</label>
+                                                            <label class="form-label">Bằng Tốt nghiệp</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_bangtn" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
@@ -338,7 +338,7 @@
                                                     </div>
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="formFileMultiple" class="form-label">Minh chứng ưu tiên (Nếu có)</label>
+                                                            <label  class="form-label">Minh chứng ưu tiên (Nếu có)</label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_uutien" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
