--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -99,13 +99,13 @@
                                 </a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
                                     SD KQ thi đánh giá năng lực hoặc chứng chỉ ngoại ngữ
-                                </a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("dkdtnk", "DangKyXetTuyens")">
-                                    ĐK dự thi năng khiếu
-                                </a>
+                                </a>                               
                             </nav>
                         </div>
-
+                        <a class="nav-link" href="@Url.Action("dkdtnk", "DangKyXetTuyens")">
+                            <div class="nav-link-icon"><i data-feather="pocket"></i></div>
+                            ĐK dự thi năng khiếu
+                        </a>
 
                         <a class="nav-link" href="@Url.Action("Index", "LePhiXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="package"></i></div>
