--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -16,7 +16,7 @@
     }
 
     .bd-rd {
-        /* border-radius: 0px !important;*/
+        border-radius: 3px
     }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
@@ -46,7 +46,7 @@
                 <div class="row g-1">
 
                     <div class="col-xxl-1 col-md-6">
-                        @Html.DropDownList("filteriDotxt", null, new { @class = "form-select bd-rd" })
+                        @Html.DropDownList("filteriDotxt", null, new { @class = "form-select bd-rd" , })
                     </div>
                     <div class="col-xxl-1 col-md-6">
                         @Html.DropDownList("filteriNvong", null, "N.vọng...", new { @class = "form-select bd-rd" })
@@ -70,7 +70,7 @@
                         <div class="d-inline-flex flex-nowrap align-items-center">
                             <button class="btn btn-outline-primary bd-rd" id="bt_search" style="margin-right:4px">Lọc</button>
                             <a class="btn btn-outline-secondary bd-rd" id="bt_reset" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                            <a class="btn btn-outline-primary bd-rd" id="bt_reset" href="#" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                            <a class="btn btn-outline-primary bd-rd" id="bt_reset" href="@Url.Action("ExportTsDkXetHocBa", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
