--- a/Areas/Admin/Views/DangKyXetTuyens/Dkxtth.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/Dkxtth.cshtml
@@ -7,6 +7,9 @@
     th, td {
         white-space: nowrap;
     }
+    .bd-rd {
+        border-radius: 3px;
+    }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
