--- a/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
@@ -25,7 +25,7 @@
             <div class="card card-header-actions mt-1 mb-1 ">
                 <div class="card-header">
                     <span>Danh sách đợt xét tuyển</span>
-                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "DotXetTuyens")"> + Thêm mới</a>
+                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("CollegerCreate", "DotXetTuyens")"> + Thêm mới</a>
                 </div>
                 <div class="card-body">
                     <table class="table table-striped table-hover">
@@ -58,8 +58,8 @@
                                     @Html.DisplayFor(modelItem => item.Dxt_GhiChu)
                                 </td>
                                 <td style="width:100px; text-align:center">
-                                    @Html.ActionLink("Sửa", "Edit", new { id = item.Dxt_ID }) |
-                                    @Html.ActionLink("Xóa", "Delete", new { id = item.Dxt_ID })
+                                    @Html.ActionLink("Sửa", "CollegerEdit", new { id = item.Dxt_ID }) |
+                                    @Html.ActionLink("Xóa", "CollegerDelete", new { id = item.Dxt_ID })
                                 </td>
                             </tr>                            
                         }
