--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -101,7 +101,7 @@
                         </a>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuThiSinh" aria-expanded="false" aria-controls="menuThiSinh">
                             <div class="nav-link-icon"><i data-feather="database"></i></div>
-                           QL Đăng ký xét tuyển
+                            QL Đăng ký xét tuyển
                             <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
 
@@ -109,14 +109,16 @@
                         <div class="collapse" id="menuThiSinh" data-bs-parent="#menuThiSinh">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
                                 @*<a class="nav-link style_wspacing" href="@Url.Action("Dkxtth", "DangKyXetTuyens")">Thống kê chung</a>*@
-                             
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng KQ thi TN THPT</a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng KQ học bạ THPT</a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo QĐ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyenKhac")">SD KQ thi đánh giá năng lực hoặc chứng chỉ ngoại ngữ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">ĐK dự thi năng khiếu</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyenKhac")">SD KQ thi đánh giá năng lực hoặc chứng chỉ ngoại ngữ</a>                               
                             </nav>
                         </div>
+                        <a class="nav-link" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">
+                            <div class="nav-link-icon"><i data-feather="pocket"></i></div>
+                            QL Dự thi năng khiếu
+                        </a>
                         <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
                             <div class="nav-link-icon"><i data-feather="shield"></i></div>
                             Tổ hợp môn
@@ -134,7 +136,8 @@
                         <div class="collapse" id="collapseDashboards" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
                                 <a class="nav-link" href="@Url.Action("Index", "Namhocs")">Năm học</a>
-                                <a class="nav-link" href="@Url.Action("Index", "DotXetTuyens")">Đợt xét tuyển</a>
+                                <a class="nav-link" href="@Url.Action("CollegerIndex", "DotXetTuyens")">Đợt xét tuyển</a>
+                                <a class="nav-link" href="@Url.Action("CollegerIndex", "DotXetTuyens")">Đợt dự thi NK</a>
                                 <a class="nav-link" href="@Url.Action("Index", "PhuongThucXetTuyens")">Phương thức xét</a>
                                 @*<a class="nav-link" href="@Url.Action("Index", "KhoiNganhs")">Khối nghành</a>*@
                                 <a class="nav-link" href="@Url.Action("Index", "KhuVucs")">Khu vực</a>
