--- a/Views/DangKyXetTuyens/dkdtnk.cshtml
+++ b/Views/DangKyXetTuyens/dkdtnk.cshtml
@@ -94,7 +94,7 @@
                                     <td>
                                         <div class="row g-3 align-items-center">
                                             <div class="col-4">
-                                                <label for="select_namtn" class="col-form-label">Ngành</label>
+                                                <label class="col-form-label">Ngành</label>
                                             </div>
                                             <div class="col-8">
                                                 <select id="select_nganh" class="form-select"></select>
@@ -108,7 +108,7 @@
                                     <td>
                                         <div class="row g-3 align-items-center">
                                             <div class="col-4">
-                                                <label for="select_namtn" class="col-form-label">Tổ hợp môn</label>
+                                                <label class="col-form-label">Tổ hợp môn</label>
                                             </div>
                                             <div class="col-8">
                                                 <select id="select_tohopmon" class="form-select"></select>
@@ -145,7 +145,7 @@
                                             <td>
                                                 <div class="row  align-items-center">
                                                     <div class="col-4">
-                                                        <label for="select_namtn" class="col-form-label">Đợt thi</label>
+                                                        <label  class="col-form-label">Đợt thi</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_Ten" disabled />                                                   
@@ -158,7 +158,7 @@
                                             <td>
                                                 <div class="row align-items-center">
                                                     <div class="col-4">
-                                                        <label class="col-form-label">Từ ngày:</label>
+                                                        <label class="col-form-label">Từ ngày</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_ThoiGian_BatDau" disabled />                                                      
@@ -172,7 +172,7 @@
                                                 
                                                 <div class="row align-items-center">
                                                     <div class="col-4">
-                                                        <label  class="col-form-label">Đến ngày:</label>
+                                                        <label  class="col-form-label">Đến ngày</label>
                                                     </div>
                                                     <div class="col-8">
                                                         <input class="form-control" id="Dxt_ThoiGian_KetThuc" disabled />                                                    
@@ -373,8 +373,9 @@
 
     $(document).ready(function () {
         /* Khai báo dữ liệu cho dropdownlist chọn năm */
-        let currentYear = new Date().getFullYear();
 
+        /*
+           let currentYear = new Date().getFullYear();
         let nam_list = [
             { value: 0, text: "Chọn năm" },
             { value: currentYear, text: currentYear },
@@ -389,20 +390,23 @@
                 text: option.text
             }));
         });
-
+        */
         $("#select_nganh").change(function () {
             select_tohopmon_view_data($("#select_nganh").val(), 0);
             $('#txt_dangky_monnangkhieu').val("Chưa chọn");
+            //if ($("#select_nganh").val() == 0) {
+              
+            //}           
             reset_fields_controll_disabled_true();
         });
 
         $("#select_tohopmon").change(function () {
-
             $('#MonThiNangKhieu_Error').val("Chưa chọn");
             let dataObj = {
                 Thm_ID: $("#select_tohopmon").val()
             }
             if (dataObj.Thm_ID == 0) {
+                $('#txt_dangky_monnangkhieu').val("Chưa chọn");
                 reset_fields_controll_disabled_true();
             }
             else {
@@ -553,22 +557,13 @@
         });
     }
     function reset_fields_controll_disabled_false() {
-        $('#Dxt_ThoiGian_KetThuc').val('');
-        $('#Dxt_ThoiGian_BatDau').val('');
-        $('#Dxt_Ten').val('');
-
-       /* $('#select_namtn').prop('disabled', false);*/
+       
         $('#files_cancuoccd').val(null);
         $('#files_cancuoccd').prop('disabled', false);
         $("#FilesList_CCCD_View tbody").empty();
     }
-    function reset_fields_controll_disabled_true() {
-        /*  $('#select_namtn').prop('disabled', true);*/
-
-        $('#Dxt_ThoiGian_KetThuc').val('');
-        $('#Dxt_ThoiGian_BatDau').val('');
-        $('#Dxt_Ten').val('');
-
+    function reset_fields_controll_disabled_true() {      
+     
         $('#files_cancuoccd').val(null);
         $('#files_cancuoccd').prop('disabled', true);
         $("#FilesList_CCCD_View tbody").empty();
